index.html: Estructuración de la sección principal content
style.css: Se aplicaron los estilos necesarios para el content

images: Se agregaron 4 imágenes necesarias para la sección trending

--- a/index.html
+++ b/index.html
@@ -66,7 +66,97 @@
                 </ul>
             </nav>
         </aside>
-        <main class="content"></main>
+        <main class="content">
+            <div class="main-content">
+                <h3>Your Projects</h3>
+                <div class="cards-container">
+                    <div class="card">
+                        <p>Super Cool Project</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras cursus finibus consectetur. In vel est id ligula lobortis pulvinar eu a est. </p>
+                    </div>
+                    <div class="card">
+                        <p>Less Cool Project</p>
+                        <p>Morbi tristique metus metus, at tristique justo malesuada ac. Aenean pretium lectus ac condimentum eleifend.</p>
+                    </div>
+                    <div class="card">
+                        <p>Impossible App</p>
+                        <p>Praesent sem tellus, laoreet et fringilla id, pharetra ac enim. Nam lacus dolor, faucibus eu metus ut, ullamcorper facilisis mi.</p>
+                    </div>
+                    <div class="card">
+                        <p>Easy Peasy App</p>
+                        <p>Phasellus vel turpis tempor, pellentesque urna et, tristique orci. Quisque eget aliquet nulla. Nam maximus lorem tristique posuere placerat. Donec sed ultrices neque.</p>
+                    </div>
+                    <div class="card">
+                        <p>Ad Blocker</p>
+                        <p>Nulla elementum augue at lorem commodo, id scelerisque turpis auctor. In elementum purus nisl, nec finibus justo semper id. Ut malesuada eros in nisl viverra fermentum.</p>
+                    </div>
+                    <div class="card">
+                        <p>Money Maker</p>
+                        <p>Vivamus turpis neque, semper in ante vitae, tempor fringilla massa. Curabitur dapibus, nisl ultrices cursus semper, mauris magna volutpat enim, sed mollis orci lacus sed velit. Nulla non mi quam.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="content-sidebar">
+                <div class="announcements-container">
+                    <h3>Announcements</h3>
+                    <div class="announcements">
+                        <div>
+                            <p>Site Maintenance</p>
+                            <p>Vivamus sit amet mi efficitur, pellentesque massa ut, lacinia sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                        <div>
+                            <p>Community Share Day</p>
+                            <p>Donec vitae odio non eros dictum tincidunt.</p>
+                        </div>
+                        <div>
+                            <p>Updated Privacy Policy</p>
+                            <p>Aenean cursus, eros vel tempor fringilla, ipsum libero interdum neque, quis rutrum dui diam eget enim.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="trending">
+                    <h3>Trending</h3>
+                    <div class="trends">
+                        <div class="recommended">
+                            <span>
+                                <img src="images/boho-7992342_640.jpg" alt="">
+                            </span>
+                            <div>
+                                <h5>@tegan</h5>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div class="recommended">
+                            <span>
+                                <img src="images/cat-8157889_640.png" alt="">
+                            </span>
+                            <div>
+                                <h5>@morgan</h5>
+                                <p>Super Cool Project</p>
+                            </div>
+                        </div>
+                        <div class="recommended">
+                            <span>
+                                <img src="images/bird-7712475_640.jpg" alt="">
+                            </span>
+                            <div>
+                                <h5>@kendall</h5>
+                                <p>Life Changing Life</p>
+                            </div>
+                        </div>
+                        <div class="recommended">
+                            <span>
+                                <img src="images/monstera-7960748_640.jpg" alt="">
+                            </span>
+                            <div>
+                                <h5>@alex</h5>
+                                <p>No Traffic Maker</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
 </body>
 </html>
